[project]
name = "us3utils"
version = "0.1.0"
authors = [
    { name = "Lukas Dobler", email = "69309597+doluk@users.noreply.github.com" },
]
description = "A set of usefull utilities related to the UltraScan 3 analysis software."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
license = { file = "LICENSE" }
dependencies = [
    "lxml>=5.3.0",
    "mysql-connector-python>=8.0.27",
    "numba>=0.54.0",
    "pandas>=1.3.3",
    "numpy>=1.21.4",
    "matplotlib>=3.4.3",
    "asyncio>=3.4.3",
    "aiohttp>=3.10.5",
    "python-dotenv>=1.0.1",
    "scipy>=1.7.3",
]

[project.urls]
Homepage = "https://github.com/doluk/us3utils"
Repository = "https://github.com/doluk/us3utils"
Issues = "https://github.com/doluk/us3utils/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
